@@ -8,6 +8,9 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
+2017-04-08 niel
+	Chg: Use '--prefer-dist' for stable branches,  '--prefer-source' otherwise. Part of the move
+		to not using the repo in production.
 2017-04-07 niel
 	Mrg: PR 2428, from Wally73 - Update simple.sh. Cleaning out discontinued code.
 	Mrg: PR 2429, from Wally73 - Update simple-expanded.sh. Cleaning out NNTP Proxy references.
